<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:text="Add a new contact"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/add_contact_form_tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_title"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_name" />

            <EditText
                android:id="@+id/add_contact_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="e.g. jonh smith" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number" />

            <EditText
                android:id="@+id/add_contact_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="e.g. 0411223344"
                android:inputType="number" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/add_bus_buttons_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelClicked"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAddClicked"
            android:text="@string/add_contact" />
    </LinearLayout>

</RelativeLayout>